fixed error message text colors that were no longer visible

--- a/Personal Website/wwwroot/css/general.css
+++ b/Personal Website/wwwroot/css/general.css
@@ -221,6 +221,7 @@ input:focus {
 
     #blazor-error-ui {
         background: lightyellow;
+        color: #212529;
         bottom: 0;
         box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
         display: none;
@@ -230,6 +231,10 @@ input:focus {
         width: 100%;
         z-index: 1000;
     }
+
+        #blazor-error-ui a {
+            color: #007bff;
+        }
 
         #blazor-error-ui .dismiss {
             cursor: pointer;
